aligned fixed search to the grid, added styles, hiding get random for now.. will change later

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -2,6 +2,36 @@ ul {
   list-style: none;
 }
 
+aside {
+  position: fixed;
+  top: 0;
+
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 1rem;
+
+  padding: 1rem 2rem;
+
+  .search {
+    grid-column-start: 12;
+    grid-column-end: 13;
+    padding: 0;
+    border: none;
+    box-shadow: none;
+    line-height: 1.5rem;
+  }
+  .search:hover {
+    cursor: pointer;
+  }
+  .search:focus {
+    color: black;
+    outline: none;
+  }
+  .random {
+    display: none;
+  }
+}
+
 input {
   border-radius: 0;
   font-size: 1rem;
